Fix z-index of .banner

--- a/_assets/css/less/partials/structure.less
+++ b/_assets/css/less/partials/structure.less
@@ -12,7 +12,7 @@
 		top: 0;
 		right: 0;
 		left: 0;
-		z-index: 9;
+		z-index: 99;
 	}
 	@media screen and (min-width: 31.5em) {
 		padding: 1.5rem 1rem;
